<resources>
    <string name="app_name">parser_cft</string>
    <string name="data_message">Дата обновления:</string>
    <string name="button_request_text">↺</string>
    <string name="convert_label">Конвертировать указанную сумму в рублях</string>
    <string name="edit_text_hint">Введите сумму в рублях</string>
    <string name="init_sum_result">0.0000</string>
    <string name="convert_button_text">Конвертировать</string>

    <string-array name="city_list">
        <item>Bangkok</item>
        <item>London</item>
        <item>Paris</item>
        <item>Singapore</item>
        <item>New York</item>
        <item>Istanbul</item>
        <item>Dubai</item>
        <item>Kuala Lumpur</item>
        <item>Hong Kong</item>
        <item>Barcelona</item>

    </string-array>
</resources>

