<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="top|left"
    android:weightSum="100"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="left|top"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:weightSum="100">
    <TextView
        android:id="@+id/date_textview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/data_message"
        android:layout_weight="85"
        android:textSize="20sp" />
        <Button
            android:id="@+id/http_request_button"
            android:layout_weight="15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/button_request_text"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_weight="90"
        tools:listitem="@layout/cell" />

    <TextView
        android:id="@+id/convert_promt_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_label"
        android:textSize="20sp" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="left|top"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:weightSum="100">

        <EditText
            android:id="@+id/enter_rubles_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:hint="@string/edit_text_hint"
            android:layout_weight="30"
            android:inputType="numberDecimal">
        </EditText>

        <TextView
            android:id="@+id/convert_result_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/init_sum_result"
            android:layout_weight="40"
            android:textSize="28sp" />
        <Button
            android:id="@+id/convert_valuta_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="getValues"
            android:layout_weight="30"
            android:textSize="12sp"
            android:text="@string/convert_button_text" />
    </LinearLayout>
</LinearLayout>
